@@ -14,3 +14,4 @@
 					Second finds the sum of all temperatures recorded during the day
 					The first calculates the average temperature over the day using the previouse two functions.
 					Added a function to convert the string dates in the map into the date::year_month:day format
+					Added a function returning average temperature per month over the years
